--- a/ss12_mang/mang1_b2.html
+++ b/ss12_mang/mang1_b2.html
@@ -13,7 +13,7 @@
     let nhapSo = prompt("Nhập số phần tử mảng muốn in ");
 
     for (let i = 0; i < nhapSo; i++) {
-        array[i] = +prompt("Array [" + i + "] =");
+        array[i] = +prompt("Array [" + i + "] =");// thêm trực tiếp phần tử mảng vào i
         if (array[i] > max) {
             max = array[i];
             viTri = i;
