Nguyen Quoc Thong nop bai module1

--- a/module1/task2_b1.html
+++ b/module1/task2_b1.html
@@ -5,44 +5,20 @@
     <title>bai 03</title>
 </head>
 <body>
-<center>
+
     <script>
 
 
-
         //in tam giac vuong
-        for (let i = 0; i <10 ; i++) {
-            for (let j = 0; j <=i ; j++) {
-                document.write("*")
+        for (let i = 3; i < 5; i++) {
+            for (let j = 0; j < i; j++) { //lap vong 1: 0-1-2 vi < (i=3),vong 2 0-1-2-3 vi < (i++=4)
+                document.write("**")
             }
             document.write("</br>")
         }
-        //in tam giac vuong nguoc
-        document.write("</br>")
-        for (let i = 10; i >0 ; i--) {
-            for (let j = i; j >0 ; j--) {
-                document.write("*")
-            }
-            document.write("</br>")
-        }
-
-        for (let i = 1; i <=5 ; i++) {
-            for (let j = 1; j <=i; j++) {
-                document.write("*");
-            }
-            document.write("<br>");
-        }
-        document.write("<br><br><br>");
-        for (let i = 5; i >=1 ; i--) {
-            for (let j = i; j >=1; j--) {
-                document.write("*");
-            }
-            document.write("<br>")
-        }
-        document.write("<br><br><br>");
 
 
     </script>
-</center>
+
 </body>
 </html>
