--- a/module1/task2_b2.html
+++ b/module1/task2_b2.html
@@ -2,22 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tam giac can dac</title>
 </head>
 <body>
-<center>
-    <script>
+<script>
 
-        let h = +prompt("Nhap sao")
-
-        for (let i = 0 ; i < h ; i++){
-            for (let j = 0 ; j <= i ; j++){
-                document.write("*")
-            }
-            document.write("</br>")
+    let h = prompt("Nhập chiều cao");
+    for (let i = 1; i <= h; i++) {
+        for (let j = 1; j <= h - i; j++) {
+            document.write("&nbsp;&nbsp;");
         }
 
-    </script>
-</center>
+        for (let j = 1; j <= 2 * i - 1; j++) {
+            document.write("*");
+        }
+        document.write("</br>");
+    }
+
+
+</script>
 </body>
 </html>
