Nguyen Quoc Thong nop bai module1

--- a/module1/task3_b2.html
+++ b/module1/task3_b2.html
@@ -14,7 +14,7 @@
         arrayRong = [];
 
         for (let i = 0; i < arrayB.length; i++) {
-            if (arrayA.indexOf(arrayB[i]) === -1 && arrayRong.indexOf(arrayB[i]) === -1) {
+            if (arrayA.indexOf(arrayB[i]) === -1) {
                 arrayRong.push(arrayB[i])
             }
         }
