--- a/module1/task4_b3.html
+++ b/module1/task4_b3.html
@@ -2,28 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>task4_b3</title>
 </head>
 <body>
-
 <script>
 
-    let array1 = prompt("enter")
-    let array2 = prompt("enter")
-    let array = array1.concat(array2);
-    let array3 = []
-    let array4 = []
+        let string1 = prompt("Nhap chuoi 1")
+        let string2 = prompt("Nhap chuoi 2")
+        let count = 0 ;
+        let stringRong = [];
+        let flag;
+        document.write(" chuoi String 1: "+string1+"</br>");
+        document.write(" chuoi String 2: "+string2+"</br>");
 
-    for (let i = 0; i <array.length; i++){
-        if(!array3.includes(array[i])){
-        array3.push(array[i])
-        }else {
-            array4.push(array[i])
+        kiTuChung(string1,string2)
+
+        function kiTuChung(s1,s2) {
+            for (let i = 0; i < s1.length; i++){
+                for (let j = 0; j < s2.length ; j++){
+                    if (s1[i] === s2[j]){
+                        flag = true;
+                        break; //why
+                    }else {
+                        flag = false;
+                    }
+                }
+                if (flag===true){
+                    count++;
+                    stringRong.push(s1[i])
+                }
+            }
+            document.write("co " +count + " ki tu chung la :" +stringRong+"</br>")
         }
-    }
-    document.write(array4.join("-"))
 
 
+      /*  function kituchung2() {
+            var s1=prompt("Nhap vao ki tu cua xau 1");
+            var s2=prompt("Nhap vao ki tu cua xau 2");
+            var count=0;
+            for (i=0;i<s1.length;i++){
+                if(s1.includes(s2[i])){
+                    count++;
+                }
+            }
+            return count;
+        }
+        document.write("So ky tu giong nhau giua 2 xau la:"+kituchung2()) */
 </script>
 
 </body>
